quarkus--projeto-teste/kubernetes/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus--crud
  labels:
    istio-injection: enabled
