quarkus--projeto-teste/kubernetes/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus--crud
  namespace: quarkus--crud
  labels:
    app: quarkus--crud
spec:
  selector:
    matchLabels:
      app: quarkus--crud
  template:
    metadata:
      labels:
        app: quarkus--crud
    spec:
      containers:
        - name: quarkus--crud
          image: localhost:32000/quarkus-crud-graalvm:latest
          readinessProbe:
            httpGet:
              path: /q/health/live
              port: 5000
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /q/health/ready
              port: 5000
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 2
          resources:
            requests:
              memory: "400Mi"
              cpu: "400m"
            limits:
              memory: "400Mi"
              cpu: "400m"
          ports:
            - containerPort: 5000
