quarkus--projeto-teste/kubernetes/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus--crud-service
  namespace: quarkus--crud
spec:
  type: ClusterIP
  selector:
   app: quarkus--crud
  ports:
    - port: 5000
      name: main-http-5000
      protocol: TCP
      targetPort: 5000
