quarkus--projeto-teste/kubernetes/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: quarkus--crud
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quarkus--crud-service
                port:
                  number: 5000
